--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-GnuPGInterface==0.3.2
+Flask==0.10.1
+Jinja2==2.8
+MarkupSafe==0.23
 PIL==1.1.7
 RPi.GPIO==0.5.11
+Werkzeug==0.10.4
+httplib2==0.9.2
+pytz==2015.6
+six==1.9.0
+twilio==4.6.0
 argparse==1.2.1
-d-feet==0.1.14
-mcpi==0.1.1
+itsdangerous==0.24
 numpy==1.6.2
 pexpect==2.4
 picamera==1.10
 pifacecommon==4.1.2
-pifacedigitalio==3.0.4
 pocketsphinx==0.0.5
+psycopg2==2.6.1
 pycurl==7.19.0
-pygame==1.9.1release
-pygobject==3.8.2
-pyserial==2.5
-python-apt==0.8.8.2
-pywapi==0.3.8
-reportlab==2.5
-unattended-upgrades==0.1
-virtualenv==1.7.1.2
-virtualenvwrapper==3.4
+redis==2.10.3
 wsgiref==0.1.2
